--- a/valentine.html
+++ b/valentine.html
@@ -22,7 +22,7 @@
 		</p><br><br><br><br><br><br><br><center><br><br><br><br><br><h2>Will you be my valentine?</h2>
 		<p id="demo"></p>
 		<button type="button" onclick="myFunction1()">Yes</button><br><br>
-		<div id="ch" style="position: absolute; height:100px;  left:910px ; width:100px;">
+		<div id="ch" style="100%">
 			<button id="b2" type="button" onmouseover="myFunction2()">No</button>
 		</div>
 			
