--- a/valentine.html
+++ b/valentine.html
@@ -5,7 +5,11 @@
 		<script>
 			function myFunction1()
 			{
-				alert("I knew it already!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
+				alert("I knew it already!!!!");
+			}
+			function myFunction3()
+			{
+				alert("Smart enough!!!!");
 			}
 			function myFunction2()
 			{
@@ -23,7 +27,7 @@
 		<p id="demo"></p>
 		<button type="button" onclick="myFunction1()">Yes</button><br><br>
 		<div id="ch" style="100%">
-			<button id="b2" type="button" onmouseover="myFunction2()">No</button>
+			<button id="b2" type="button" onmouseover="myFunction2() onclick="myFunction3()">No</button>
 		</div>
 			
 
