Updated index.html added animation

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 		<a href="valentine.html"><h1>Engineering Valentine</h1></a><hr>
 		<a href="game.html"><h1>Fruitless Effort</h1></a><hr>
 		<a href="xmas.html"><h1>Merry Christmas</h1></a><hr>
-			
-
-		
+		<a href="colorspiral.html"><h1>Animations</h1></a><hr>
 	</body>
 </html>
 		
